dev 68 fix bignumber overflow & adjust white mode

--- a/src/components/productView/productView.module.css
+++ b/src/components/productView/productView.module.css
@@ -4,9 +4,17 @@
 }
 .wrapper {
   display: flex;
+  flex-direction: row;
   width: 100%;
   align-items: flex-start;
   gap: 8%;
+}
+
+@media screen and (max-width: 900px) {
+  .wrapper {
+    flex-direction: column;
+    gap: 40px;
+  }
 }
 
 .imageWrapper {
